--- a/templates/Stacked_columns.html
+++ b/templates/Stacked_columns.html
@@ -43,7 +43,6 @@
                                         <a href="/pie">定性-饼图</a>
                                         <a href="/rose">定性-玫瑰图</a>
                                         <a href="/hist">定量-直方图</a>
-                                        <a href="/sp">定量-面积图</a>
                                     </li>
                                 </ul>
                             </li>
@@ -51,10 +50,11 @@
                                 <a href="#" class="sidebar-nav-menu"><i class="icon-chevron-right sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="icon-gift sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">多变量图</span></a>
                                 <ul>
                                     <li>
-                                        <a href="/box">定量-箱线图</a>
+                                        <a href="/box">定性和定量-箱线图</a>
                                         <a href="/sca">定量和定量-散点图</a>
                                         <a href="/Stacked">定性和定性-堆积柱形图</a>
                                         <a href="/line">时序型-折线图</a>
+                                        <a href="/sp">定量-面积图</a>
                                     </li>
                                 </ul>
                             </li>
